--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ h1 {color:blue;}
 <tr>
 	<th style="width:20%"></th>
 	<th>
-		<img src="imagenes/Picture1.jpg" alt="foto" width="300" title="Pedro Peña E">
+		<img src="Picture1.jpg" alt="foto" width="300" title="Pedro Peña E">
 	</th>
 	<th style="width:30%">
 		<h2>Alumno:pedro peña enriquez</h2>
@@ -81,7 +81,7 @@ h1 {color:blue;}
 <a href="http://www.itszn.edu.mx/coyote/"><h1 align="center">ITSZN</h1>
 <hr>
 
-<a href="https://www.facebook.com/pedro.pena.90663894"><img src="imagenes/Facebook.svg" alt="foto" width="20%">
+<a href="https://www.facebook.com/pedro.pena.90663894"><img src="Facebook.svg" alt="foto" width="20%">
 </th>
 
 
