--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" href="css/Clases.css">
 <title>Datos de estudiante</title>
 </head>
 <body> 
-<style>
-body{background-color:#99CAFF;}
-h1 {color:blue;}
-</style>
+
 <img src="itszn.png"alt="100"wide="100"height="100">
  
 <div style="background-color:white;">
@@ -16,7 +14,7 @@ h1 {color:blue;}
 <tr>
 	<th style="width:20%"></th>
 	<th>
-		<img src="Picture1.jpg" alt="foto" width="300" title="Pedro Peña E">
+		<img src="imagenes/Picture1.jpg" alt="foto" width="300" title="Pedro Peña E">
 	</th>
 	<th style="width:30%">
 		<h2>Alumno:pedro peña enriquez</h2>
@@ -81,7 +79,7 @@ h1 {color:blue;}
 <a href="http://www.itszn.edu.mx/coyote/"><h1 align="center">ITSZN</h1>
 <hr>
 
-<a href="https://www.facebook.com/pedro.pena.90663894"><img src="Facebook.svg" alt="foto" width="20%">
+<a href="https://www.facebook.com/pedro.pena.90663894"><img src="imagenes/Facebook.svg" alt="foto" width="20%">
 </th>
 
 
